@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat May 17 14:59:29 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Jun  1 06:37:11 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="horizontal">
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -15,13 +15,8 @@
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <property name="tooltip_text">Enable Dwell Click</property>
+            <property name="label" translatable="yes">On</property>
             <property name="response_id">0</property>
-            <child>
-              <widget class="GtkImage" id="image1">
-                <property name="visible">True</property>
-                <property name="stock">gtk-ok</property>
-              </widget>
-            </child>
           </widget>
           <packing>
             <property name="expand">False</property>
@@ -152,13 +147,8 @@
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <property name="tooltip_text">Enable Dwell Click</property>
+            <property name="label" translatable="yes">On</property>
             <property name="response_id">0</property>
-            <child>
-              <widget class="GtkImage" id="image2">
-                <property name="visible">True</property>
-                <property name="stock">gtk-ok</property>
-              </widget>
-            </child>
           </widget>
           <packing>
             <property name="expand">False</property>
