@@ -1,3 +1,7 @@
+2008-06-01 Gerd Kohlberger <gerdk@svn.gnome.org>
+
+	* src/dwell-click-applet.c: Change 'enable dwell' icon to a label.
+
 2008-05-19 Gerd Kohlberger <gerdk@svn.gnome.org>
 
 	* src/mt-main.c: Fix typos.
